--- a/package.json
+++ b/package.json
@@ -3,10 +3,13 @@
   "version": "1.0.0",
   "description": "Shareable commitlint config with custom type enum",
   "files": [
-    "index.js"
+    "src",
+    "dist"
   ],
   "scripts": {
     "clean": "exit 0",
+    "build": "rollup src/index.js --file dist/index.umd.js --format umd --name Commitlint-Config",
+    "lint": "eslint --fix src/**",
     "deps": "exit 0",
     "pkg": "exit 0",
     "start": "exit 0",
@@ -29,8 +32,14 @@
     "url": "https://github.com/cryptiumtech/util-commitlint-config-js/issues"
   },
   "homepage": "https://github.com/cryptiumtech/util-commitlint-config-js#readme",
+  "dependencies": {
+    "@cryptium/util-commitlint-config-type-enum": "^1.0.0"
+  },
   "devDependencies": {
     "@commitlint/utils": "^8.1.0",
-    "@cryptium/util-commitlint-config-type-enum": "^1.0.0"
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-plugin-import": "^2.18.2",
+    "rollup": "^1.25.2"
   }
 }
