--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
   "name": "@cryptium/util-commitlint-config",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "Shareable commitlint config with custom type enum",
+  "main": "dist/main.umd.js",
+  "module": "src/main",
   "files": [
     "src",
     "dist"
   ],
   "scripts": {
     "clean": "exit 0",
-    "build": "rollup src/index.js --file dist/index.umd.js --format umd --name Commitlint-Config",
+    "build": "rollup src/main.js --file dist/main.umd.js --format umd --name Commitlint-Config",
     "lint": "eslint --fix src/**",
     "deps": "exit 0",
     "pkg": "exit 0",
@@ -33,7 +35,7 @@
   },
   "homepage": "https://github.com/cryptiumtech/util-commitlint-config-js#readme",
   "dependencies": {
-    "@cryptium/util-commitlint-config-type-enum": "^1.0.1"
+    "@cryptium/util-commitlint-config-type-enum": "^1.0.2"
   },
   "devDependencies": {
     "@commitlint/utils": "^8.1.0",
